2009-07-07  Andrew John Hughes  <ahughes@redhat.com>

	* java/util/Scanner.java,
	* java/util/regex/Matcher.java:
	Replace tab characters with spaces.
	
2009-06-29  Andrew Haley  <aph@redhat.com>

	PR java/40590	
	* tools/gnu/classpath/tools/javah/FieldHelper.java (print):
	Use printName().
	* tools/gnu/classpath/tools/javah/MethodHelper.java (print):
	Use printName().
	* tools/gnu/classpath/tools/javah/CniStubPrinter.java (printDecl):
	Use printName().
	* tools/gnu/classpath/tools/javah/Keywords.java (words): Replace
	with keywords list from  gcc/java/mangle.c.
	* tools/gnu/classpath/tools/javah/ClassWrapper.java (printMethods):
	Don't pre-convert a C++ keyword.
	(print(CniPrintStream)): Call CniPrintStream.printName().
	(printContents): Likewise.
	* tools/gnu/classpath/tools/javah/CniPrintStream.java
	(getClassName): Don't call replaceAll("/", "::").
	(print(Type)): Add ""::" befor name, " *" after.  Use printName(), not
	print.
	(printName(PrintStream, String), printName(String), printlnName):
	New methods.
	(moveToPackage): Use printName().

2009-03-29  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/faq/faq.wml: Fix link to cp-hacking.html.

2009-03-29  Mark Wielaard  <mark@klomp.org>

	* m4/ac_prog_antlr.m4: Check whether ANTLR_JAR is empty.

2009-03-26  Andrew John Hughes  <ahughes@redhat.com>

	PR classpath/39408:
	* tools/gnu/classpath/tools/javah/ClassWrapper.java:
	(linkSupers()): Make package-private.
	* tools/gnu/classpath/tools/javah/JniIncludePrinter.java:
	(writeFields(ClassWrapper, JniPrintStream)):
	Link in data from superclass before searching for fields.

2009-03-20  Andrew John Hughes  <ahughes@redhat.com>

	* tools/gnu/classpath/tools/javah/ClassWrapper.java,
	* tools/gnu/classpath/tools/javah/CniPrintStream.java,
	* tools/gnu/classpath/tools/javah/CniStubPrinter.java,
	* tools/gnu/classpath/tools/javah/GcjhMain.java,
	* tools/gnu/classpath/tools/javah/JniIncludePrinter.java,
	* tools/gnu/classpath/tools/javah/JniPrintStream.java,